[remoting host] Revert change to params_out->duration

This fixes a perf regression introduced by crrev.com/515673, and sets
the encoder's "duration" parameter to a constant value to avoid a
positive-feedback loop.

Bug: 804032
Change-Id: I2fc184ebed297c1038d49d8bc3dd885522b62c8f